--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -34,7 +34,7 @@
     display: block;
   }
   &:hover .main-nav__logo-color {
-    fill: #263341;
+    fill: #d22856;
   }
   &:active .main-nav__logo-color {
     fill: #ffffff;
@@ -54,7 +54,7 @@
   font-size: 0;
   z-index: 100;
   &:hover .main-nav__toggler-fill {
-    fill: #263341;
+    fill: #d22856;
   }
   &:active .main-nav__toggler-fill {
     opacity: 0.3;
