--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -8,6 +8,14 @@
   &--hide {
     display: none;
   }
+
+  &--form {
+    padding-top: 48px;
+  }
+}
+
+.page-footer__logo {
+  margin-bottom: 33px;
 }
 
 .page-footer__logo-svg {
@@ -47,7 +55,7 @@
   }
 }
 
-.footer__copyright-svg {
+.page-footer__copyright-svg {
   width: 43px;
   height: 50px;
   vertical-align: middle;
