--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -15,9 +15,10 @@
 .page-header__title {
   margin: 0;
   .container();
-  padding-top: 35px;
-  padding-bottom: 85px;
+  padding-top: 30px;
+  padding-bottom: 80px;
   font-size: 24px;
+  line-height: 30px;
   font-weight: lighter;
   color: #ffffff;
   text-align: center;
@@ -59,8 +60,8 @@
     }
 
     &--photo {
-      padding-top: 70px;
-      padding-bottom: 135px;
+      padding-top: 68px;
+      padding-bottom: 137px;
     }
   }
 
