--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -43,8 +43,8 @@
   }
 
   &--textarea {
-    padding-top: 27px;
-    margin-bottom: 28px;
+    padding-top: 33px;
+    margin-bottom: 44px;
   }
 
   & > legend {
@@ -66,7 +66,7 @@
   }
 
   > .form__legend--textarea {
-    top: 25px;
+    top: 28px;
   }
 
   > .form__legend--show {
@@ -112,18 +112,18 @@
   border: 2px solid #e5e5e5;
 }
 
-.form__checkbox-label {
+.form__checkbox-wrapper {
   position: relative;
+  margin-bottom: 43px;
+}
+
+.form__checkbox-label {
   display: block;
-  margin-bottom: 48px;
+  margin-bottom: 0;
   padding-left: 67px;
   font-size: 18px;
   font-weight: normal;
   line-height: 39px;
-
-  &:last-child {
-    margin-bottom: 44px;
-  }
 }
 
 .form__checkbox:checked + .form__checkbox-label::before {
@@ -203,8 +203,7 @@
 
 .form__textarea {
   margin-top: 30px;
-  margin-bottom: 20px;
-  padding: 20px;
+  padding: 15px;
   width: 100%;
   min-height: 200px;
   font-family: @font-family;
@@ -377,7 +376,7 @@
     }
 
     &--textarea {
-      margin-bottom: 66px;
+      margin-bottom: 68px;
       border: 2px solid #e5e5e5;
       .form__container {
         display: flex;
@@ -423,7 +422,7 @@
       margin-bottom: 0;
       padding-top: 18px;
       padding-bottom: 18px;
-      padding-left: 0;
+      padding-left: 5px;
       padding-right: 20px;
       height: 64px;
     }
@@ -431,6 +430,30 @@
 
   .form__input-text {
     margin-bottom: 0;
+    padding-right: 60px;
+    padding-left: 17px;
+  }
+
+  .form__input-wrapper {
+    position: relative;
+    z-index: 1;
+    margin-left: 0;
+    &::before {
+      content: "";
+      position: absolute;
+      right: 0;
+      top: 1px;
+      width: 60px;
+      height: 60px;
+      z-index: 2;
+    }
+
+    &--tel::before {
+      background: #e5e5e5 url(../img/icon-phone.svg) center no-repeat;
+    }
+    &--email::before {
+      background: #e5e5e5 url(../img/icon-mail.svg) center no-repeat;
+    }
   }
 
   .form__radio-label {
@@ -463,10 +486,15 @@
   .form__textarea {
     flex-grow: 1;
     width: 496px;
-    margin-top: 50px;
-    margin-bottom: 42px;
-    margin-left: 33px;
-    margin-right: 33px;
+    min-height: 193px;
+    margin-top: 45px;
+    margin-bottom: 49px;
+    margin-left: 38px;
+    margin-right: 38px;
+    padding-top: 14px;
+    padding-bottom: 17px;
+    padding-left: 19px;
+    padding-right: 18px;
   }
 
 
@@ -612,7 +640,7 @@
       .form__inner {
         width: 50%;
         margin-bottom: 0;
-        margin-left: 40px;
+        margin-left: 30px;
       }
 
       .form__label {
@@ -621,7 +649,7 @@
         height: 55px;
       }
 
-      .form__input-text{
+      .form__input-wrapper {
         width: 371px;
       }
     }
@@ -633,11 +661,12 @@
       border: 2px solid #e5e5e5;
 
       .form__container {
+        margin-left: 59px;
+        margin-right: 59px;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
-
+        justify-content: space-between;
       }
     }
 
@@ -670,19 +699,33 @@
     border-radius: 50%;
   }
 
+  .form__checkbox-wrapper {
+    display: flex;
+    position: relative;
+    width: 30%;
+    margin-bottom: 0;
+    &--selfie {
+      order: -3;
+    }
+    &--chuck {
+      order: -2;
+    }
+    &--tower {
+      order: -1;
+    }
+  }
 
   .form__checkbox-label {
-    position: relative;
     display: block;
     width: 290px;
     margin-bottom: 40px;
-    padding-left: 80px;
+    padding-left: 61px;
     font-size: 18px;
     line-height: 39px;
   }
 
   .form__checkbox + .form__checkbox-label::before {
-    left: 33px;
+    left: 0;
   }
 
   .form__reminder {
