--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -70,8 +70,8 @@
 
 @media @tablet-widths {
   .page-footer {
-    padding-top: 40px;
-    padding-bottom: 30px;
+    padding-top: 37px;
+    padding-bottom: 9px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -88,24 +88,25 @@
 
   .page-footer__social {
     display: flex;
+    align-items: center;
     justify-content: center;
     width: 180px;
+    margin-right: 13px;
     flex-grow: 1;
   }
 
 
   .page-footer__copyright {
     width: 134px;
-    height: 50px;
     display: flex;
     padding-left: 0;
     justify-content: space-between;
+    align-items: center;
     font-size: 14px;
 
     span {
       padding-right: 0;
-      line-height: 50px;
-      vertical-align: middle;
+      line-height: 18px;
       font-size: 14px;
     }
   }
@@ -113,27 +114,39 @@
   .page-footer__copyright-svg {
     width: 39px;
     height: 50px;
-    vertical-align: middle;
   }
 }
 
 @media @desktop-widths {
   .page-footer {
-    padding: 62px 0;
+    padding: 70px 0 80px 0;
     justify-content: space-between;
 
     &--photo {
-      padding-top: 102px;
-      padding-bottom: 42px;
+
     }
 
     &--form {
-      padding-top: 72px;
+      padding-top: 60px;
+
+      .page-footer__logo {
+        margin-right: 10px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+
+      .page-footer__social {
+        padding-top: 10px;
+        margin-bottom: 0;
+        width: auto;
+      }
     }
   }
 
   .page-footer__logo {
     margin-right: 0;
+    margin-bottom: 0;
+    padding-bottom: 7px;
   }
 
   .page-footer__logo-svg {
@@ -143,11 +156,15 @@
     display: block;
   }
   .page-footer__social {
+    padding-top: 7px;
+    margin-bottom: 0;
     width: auto;
   }
 
   .page-footer__copyright {
     width: 150px;
+    padding-top: 7px;
+    margin-bottom: 0;
     text-align: right;
     span {
       font-size: 18px;
