--- a/less/blocks/research.less
+++ b/less/blocks/research.less
@@ -15,6 +15,10 @@
       font-weight: bold;
       line-height: 36px;
       color: #000000;
+
+      span {
+        display: block;
+      }
     }
 
     p {
@@ -22,6 +26,9 @@
       font-size: 14px;
       letter-spacing: 0.35px;
       line-height: 24px;
+      span {
+        display: block;
+      }
     }
   }
   .research__inner {
@@ -65,12 +72,18 @@
       width: 380px;
       margin-top: 30px;
       margin-bottom: 22px;
+      span {
+        display: inline-block;
+      }
     }
 
     p {
-      width: 520px;
+      width: auto;
       font-size: 18px;
       line-height: 30px;
+      span {
+        display: inline-block;
+      }
     }
   }
   .research__inner {
