--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -20,7 +20,6 @@
   padding: 20px;
   padding-bottom: 26px;
   text-align: left;
-  border-bottom: 1px solid #000000;
 }
 
 .main-nav__logo-svg {
@@ -47,7 +46,6 @@
   right: 20px;
   top: 19px;
   display: block;
-  margin: 16px 0 21px;
   border: none;
   outline: none;
   background-color: transparent;
@@ -85,6 +83,10 @@
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
   border-bottom: 1px solid #000000;
 
+  &:first-child {
+    border-top: 1px solid #000000;
+  }
+
   a {
     display: block;
     padding: 16px 0 15px 0;
@@ -117,7 +119,7 @@
 }
 
 @media @tablet-widths {
-  .main-nav__wrapper {
+  .main__nav--nojs .main-nav__wrapper {
     padding-bottom: 256px;
   }
 
