--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -30,6 +30,32 @@
   text-align: center;
 }
 
+.feedback__tel {
+  .feedback__text {
+    &:hover {
+      color: #283645;
+      text-decoration: underline;
+    }
+    &:active {
+      color: #283645;
+      opacity: 0.3;
+    }
+  }
+}
+
+.feedback__mail {
+  .feedback__text {
+    &:hover {
+      color: #283645;
+      text-decoration: underline;
+    }
+    &:active {
+      color: #283645;
+      opacity: 0.3;
+    }
+  }
+}
+
 .feedback__address {
   margin-bottom: 0;
 }
