--- a/less/blocks/gallery.less
+++ b/less/blocks/gallery.less
@@ -64,7 +64,7 @@
   &--daily {
   .container();
   margin-bottom: 20px;
-  padding: 19px 16px;
+  padding: 19px 16px 20px 16px;
   background-color: rgb(242, 242, 242);
   }
 }
@@ -125,7 +125,7 @@
 
 .gallery__call-to-action {
   .container();
-  padding: 25px 0 41px 0;
+  padding: 23px 0 41px 0;
   font-size: 14px;
   line-height: 30px;
   text-align: center;
@@ -151,6 +151,7 @@
 
     span {
       display: inline-block;
+      vertical-align: top;
     }
   }
 
@@ -196,14 +197,15 @@
       flex-direction: row;
       flex-wrap: wrap;
       margin-bottom: 0;
-      padding-top: 24px;
-      padding-left: 25px;
+      padding-top: 22px;
+      padding-left: 27px;
       padding-right: 29px;
       padding-bottom: 6px;
       line-height: 24px;
 
       .gallery__post-text {
         margin-bottom: 18px;
+        letter-spacing: 0.3px;
       }
     }
   }
@@ -217,6 +219,7 @@
 
   .gallery__post-text {
     margin-bottom: 13px;
+    letter-spacing: 0.3px;
   }
 
   .gallery__post-likes {
