--- a/less/blocks/research.less
+++ b/less/blocks/research.less
@@ -6,31 +6,32 @@
   .research {
     padding-top: 57px;
     display: block;
+  }
+  .research__title {
+    margin: 0;
+    margin-top: 25px;
+    width: 168px;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 36px;
+    color: #000000;
 
-    h2 {
-      margin: 0;
-      margin-top: 25px;
-      width: 168px;
-      font-size: 30px;
-      font-weight: bold;
-      line-height: 36px;
-      color: #000000;
-
-      span {
-        display: block;
-      }
-    }
-
-    p {
-      margin: 10px 0;
-      font-size: 14px;
-      letter-spacing: 0.35px;
-      line-height: 24px;
-      span {
-        display: block;
-      }
+    span {
+      display: block;
     }
   }
+
+  .research__text {
+    margin: 10px 0;
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    line-height: 24px;
+
+    span {
+      display: inline-block;
+    }
+  }
+
   .research__inner {
     .container();
     padding-left: 309px;
@@ -67,25 +68,28 @@
   .research {
     padding-top: 5px;
     background-color: rgb(242, 242, 242);
+  }
 
-    h2 {
-      width: 380px;
-      margin-top: 30px;
-      margin-bottom: 22px;
-      span {
-        display: inline-block;
-      }
-    }
-
-    p {
-      width: auto;
-      font-size: 18px;
-      line-height: 30px;
-      span {
-        display: inline-block;
-      }
+  .research__title {
+    width: 380px;
+    margin-top: 30px;
+    margin-bottom: 22px;
+    span {
+      display: inline-block;
+      vertical-align: top;
     }
   }
+
+  .research__text {
+    width: auto;
+    font-size: 18px;
+    line-height: 30px;
+    span {
+      display: inline-block;
+      vertical-align: top;
+    }
+  }
+
   .research__inner {
     padding: 60px 0 116px 365px;
     &:before {
