--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -60,11 +60,6 @@
     }
   }
 
-  .reviews__item {
-    display: flex;
-    flex-direction: column;
-  }
-
   .reviews__author {
     padding-top: 37px;
     padding-bottom: 0;
@@ -152,6 +147,7 @@
     top: 50%;
     cursor: pointer;
     border: none;
+    opacity: 0.3;
 
     &--prev {
       background: url(../img/icon-review-arrow-left.svg) no-repeat;
@@ -162,10 +158,11 @@
       right: 0;
     }
     &:hover {
-      opacity: 1;
+      color: #283645;
+      opacity: 0.6;
     }
     &:active {
-      opacity: .1;
+      opacity: 0.1;
     }
   }
 
