--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -51,7 +51,6 @@
     padding-right: 10px;
     font-size: 14px;
     line-height: 50px;
-    vertical-align: middle;
   }
 }
 
@@ -60,7 +59,7 @@
   height: 50px;
   vertical-align: middle;
   &:hover path {
-    fill: #263341
+    fill: #263341;
   }
   &:active path {
     fill: #263341;
@@ -91,8 +90,12 @@
     align-items: center;
     justify-content: center;
     width: 180px;
-    margin-right: 13px;
     flex-grow: 1;
+    margin-right: 12px;
+
+    &--photo {
+      margin-left: 12px;
+    }
   }
 
 
@@ -105,9 +108,12 @@
     font-size: 14px;
 
     span {
-      padding-right: 0;
+      padding-top: 3px;
+      padding-left: 3px;
+      padding-right: 3px;
       line-height: 18px;
       font-size: 14px;
+      letter-spacing: 0.2px;
     }
   }
 
@@ -121,10 +127,6 @@
   .page-footer {
     padding: 70px 0 80px 0;
     justify-content: space-between;
-
-    &--photo {
-
-    }
 
     &--form {
       padding-top: 60px;
@@ -149,16 +151,15 @@
     padding-bottom: 7px;
   }
 
+  .page-footer__social {
+    margin-bottom: 0;
+  }
+
   .page-footer__logo-svg {
     display: none;
   }
   .page-footer__logo-desktop {
     display: block;
-  }
-  .page-footer__social {
-    padding-top: 7px;
-    margin-bottom: 0;
-    width: auto;
   }
 
   .page-footer__copyright {
@@ -168,6 +169,7 @@
     text-align: right;
     span {
       font-size: 18px;
+      line-height: 18px;
     }
   }
 }
