--- a/less/blocks/upload.less
+++ b/less/blocks/upload.less
@@ -15,7 +15,7 @@
 
 .upload__photo {
   padding-top: 20px;
-  padding-bottom: 35px;
+  padding-bottom: 37px;
 }
 
 .upload__filter-list {
@@ -23,30 +23,39 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
-  margin-bottom: 33px;
-  padding-bottom: 40px;
+  margin-bottom: 34px;
+  padding-bottom: 35px;
   position: relative;
 }
 
 .upload__filter-item {
   display: flex;
   align-items: center;
-  width: 48px;
-  height: 48px;
 }
 
 .upload__filter-icon {
+  display: inline-block;
+  width: 48px;
+  vertical-align: middle;
+
   &--crop {
-    width: 48px;
-    height: 48px;
+    svg {
+      width: 44px;
+      height: 44px;
+    }
   }
   &--fill {
-    width: 48px;
-    height: 48px;
+    svg {
+      width: 48px;
+      height: 43px;
+    }
   }
   &--contrast {
-    width: 48px;
-    height: 32px;
+    svg {
+      width: 32px;
+      height: 32px;
+    }
+
   }
 }
 
@@ -116,6 +125,7 @@
   font-size: 18px;
   font-weight: bold;
   text-align: center;
+  cursor: pointer;
   color: #d22856;
   border: 3px solid #d22856;
   border-radius: 50px;
@@ -181,33 +191,38 @@
 
   .upload__filter-item {
     width: 279px;
-    height: 73px;
+    height: 72px;
     flex-grow: 1;
     border-bottom: 1px solid #dde0e1;
     &:first-of-type {
-      padding-top: 2px;
+      padding-top: 1px;
     }
   }
 
   .upload__filter-icon {
     margin: 0;
-    margin-left: 15px;
-    margin-right: 30px;
+    margin-left: 8px;
+    margin-right: 22px;
     cursor: default;
     &--crop {
-      width: 28px;
-      height: 24px;
+      svg {
+        width: 22px;
+        height: 22px;
+      }
     }
     &--fill {
-      width: 28px;
-      height: 36px;
+      svg {
+        width: 24px;
+        height: 22px;
+      }
     }
     &--contrast {
-      width: 30px;
-      height: 18px;
+      svg {
+        width: 16px;
+        height: 16px;
+      }
     }
   }
-
 
   .upload__icons-svg {
     vertical-align: middle;
@@ -238,11 +253,11 @@
 
   .upload__range-circle {
     &--crop {
-      right: 40px;
+      right: 42px;
     }
 
     &--fill {
-      left: 28px;
+      left: 25px;
     }
 
     &--contrast {
@@ -283,7 +298,7 @@
 
   .upload__filter-list {
     width: 410px;
-    margin-bottom: 143px;
+    margin-bottom: 146px;
   }
 
   .upload__filter-item {
@@ -291,16 +306,28 @@
   }
 
   .upload__filter-icon {
-    height: 48px;
-    margin-left: 6px;
-    &--fill {
-      width: 48px;
-    }
+    margin: 0;
+    margin-left: 8px;
+    margin-right: 25px;
+    cursor: default;
+    width: 48px;
     &--crop {
-      width: 48px;
+      svg {
+        width: 44px;
+        height: 44px;
+      }
+    }
+    &--fill {
+      svg {
+        width: 48px;
+        height: 43px;
+      }
     }
     &--contrast {
-      width: 46px;
+      svg {
+        width: 32px;
+        height: 32px;
+      }
     }
   }
 
