--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -5,6 +5,7 @@
 
 .feedback__inner {
   padding-top: 43px;
+  padding-bottom: 18px;
 }
 
 .feedback__title {
@@ -22,9 +23,9 @@
 
 .feedback__tel,
 .feedback__mail,
-.fedback__address {
+.feedback__address {
   margin: 0 auto;
-  margin-bottom: 21px;
+  margin-bottom: 22px;
   width: 260px;
   font-style: normal;
   text-align: center;
@@ -56,10 +57,6 @@
   }
 }
 
-.feedback__address {
-  margin-bottom: 0;
-}
-
 .feedback__method {
   display: block;
   margin-bottom: 5px;
@@ -76,6 +73,7 @@
 @media @tablet-widths {
   .feedback__inner {
     padding-top: 47px;
+    padding-bottom: 0;
   }
 
   .feedback__promo {
