--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,36 +1,48 @@
 .map {
   position: relative;
   height: 200px;
+  background: #ece4c8 url(../img/bg-map-mobile@1x.png) no-repeat center;
+
+  @media @retina {
+    background-image: url(../img/bg-map-mobile@2x.png);
+  }
 
   iframe {
     width: 100%;
     height: 200px;
   }
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 38px;
+    top: -5px;
+    right: 0;
+    background: url(../img/bg-triangle-white-footer.svg) top center no-repeat;
+    background-size: auto 100%;
+    z-index: 7;
+  }
 }
 
-.map__background {
-  position: absolute;
-  height: 33px;
-  top: -1px;
-  right: 0;
-  left: 0;
-  background: url(../img/bg-triangle-white-footer.svg) top center no-repeat;
-  background-size: auto 100%;
-  z-index: 2;
-}
 
 @media @tablet-widths {
   .map {
     height: 375px;
+    background-image: url(../img/bg-map-tablet@1x.jpg);
+
+    @media @retina {
+      background-image: url(../img/bg-map-tablet@2x.png);
+    }
 
     iframe {
-    width: 100%;
-    height: 375px;
+      width: 100%;
+      height: 375px;
     }
-  }
 
-  .map__background {
-    height: 72px;
+    &::before {
+      height: 72px;
+    }
   }
 }
 
@@ -38,14 +50,19 @@
   .map {
     height: 506px;
     margin-bottom: 0;
+    background-image: url(../img/bg-map-desktop@1x.jpg);
+
+    @media @retina {
+      background-image: url(../img/bg-map-desktop@2x.png);
+    }
+
+    &::before {
+      height: 129px;
+    }
 
     iframe {
-    width: 100%;
-    height: 509px;
+      width: 100%;
+      height: 509px;
     }
-  }
-
-  .map__background {
-    height: 125px;
   }
 }
