--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -60,6 +60,7 @@
   margin-bottom: 11px;
   font-size: 18px;
   font-weight: bold;
+  color: #000000;
 }
 
 .advantages__item-text {
@@ -114,11 +115,15 @@
 
   .advantages__item {
     margin-bottom: 36px;
-}
+  }
 
   .advantages__item-title {
     margin: 0;
     margin-bottom: 10px;
+  }
+
+  .advantages__item-text {
+    letter-spacing: 0.2px;
   }
 
   .advantages__photo {
@@ -177,6 +182,7 @@
     font-size: 18px;
     line-height: 30px;
     text-align: center;
+    letter-spacing: 0.05px;
   }
 
   .advantages__item-photo {
