--- a/less/blocks/research.less
+++ b/less/blocks/research.less
@@ -23,6 +23,7 @@
 
   .research__text {
     margin: 10px 0;
+    padding-right: 10px;
     font-size: 14px;
     letter-spacing: 0.35px;
     line-height: 24px;
