--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -101,7 +101,6 @@
 
   .advantages__wrapper {
     flex-direction: row-reverse;
-    justify-content: space-between;
   }
 
   .advantages__list {
@@ -110,7 +109,7 @@
     padding: 0;
     padding-top: 75px;
     text-align: left;
-
+    flex-grow: 1;
   }
 
   .advantages__item {
@@ -131,6 +130,8 @@
     height: 480px;
     width: 270px;
     margin-top: 5px;
+    margin-right: 30px;
+    flex-grow: 1;
   }
 }
 
