--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -5,7 +5,6 @@
   color: #ffffff;
   font-weight: bold;
 
-
   &--opened {
     background-color: #263341;
   }
@@ -189,7 +188,7 @@
       display: block;
     }
   }
-
+  .main-nav--closed .main-nav__list,
   .main-nav__list {
     position: relative;
     display: flex;
