--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -50,6 +50,7 @@
   background-color: transparent;
   font-size: 0;
   z-index: 100;
+  cursor: pointer;
   &:hover .main-nav__toggler-fill {
     fill: #d22856;
   }
